service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rohan-service
spec:
  selector:
    app: rohan
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 81
