Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rohan-ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /prt-rohan
            pathType: Prefix
            backend:
              service:
                name: rohan-service
                port:
                  number: 80
